--- a/src/assets/styles/viewForm.css
+++ b/src/assets/styles/viewForm.css
@@ -1,18 +1,22 @@
-
 h1 {
     color: #333;
+}
+
+.formContainer {
+    margin: 0 auto;
 }
 
 form {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    margin-top: 20px;
-    margin-left: 20rem;
-    margin-right: 20rem;
+    margin: 20px auto;
+    padding: 0 20px;
+    width: 80%;
 }
 
-input[type="text"], button {
+input[type="text"],
+button {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -36,10 +40,46 @@ button:hover {
 }
 
 .title {
-    background-color: #f3f3f3;
+    background-color: #bebebe;
     padding: 20px;
     margin-bottom: 20px;
     text-align: center;
     font-size: 24px;
     font-weight: bold;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.field {
+    margin-bottom: 20px;
+}
+
+.textInput,
+.selectInput {
+    width: 100%;
+}
+
+.checkboxLabel {
+    display: block;
+    margin-bottom: 10px;
+}
+
+.submitButton {
+    background-color: #069218;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+.submitButton:hover {
+    background-color: #084410;
+}
+
+@media screen and (max-width: 768px) {
+    .formContainer {
+        padding: 10px;
+    }
 }
