--- a/src/assets/styles/createform.css
+++ b/src/assets/styles/createform.css
@@ -3,7 +3,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     width: 100%;
-    height: 80vh;
+    height: 80%;
     background-color: #acabab;
     border-radius: 20px;
 }
